--- a/src/partials/typography.scss
+++ b/src/partials/typography.scss
@@ -1,8 +1,49 @@
 @import "mixins";
 
 @mixin typography($font_size, $line-height) {
-    font-size: $font_size;
-    line-height: $line-height;
-    font-style: normal;
-    font-family: "Arial-Bold";
+  font-size: $font_size;
+  line-height: $line-height;
+  font-style: normal;
+  font-weight: bold;
+  font-family: map-get($map: $font-families, $key: bold);
+}
+
+.h1 {
+  @include typography(34px, 56px);
+}
+
+.h2 {
+  @include typography(22px, 32px);
+}
+
+.h3 {
+  @include typography(17px, 28px);
+}
+
+.h4 {
+  @include typography(15px, 24px);
+}
+
+.h5 {
+  @include typography(13px, 20px);
+}
+
+@mixin subtitle($font_size, $line-height) {
+  font-family: map-get($map: $font-families, $key: medium);
+  font-size: $font_size;
+  line-height: $line-height;
+  font-style: normal;
+  font-weight: medium;
+}
+
+.sub1 {
+  @include subtitle(17px, 28px);
+}
+
+.sub2 {
+  @include subtitle(15px, 24px);
+}
+
+.sub3 {
+  @include subtitle(13px, 20px);
 }
