--- a/src/partials/spacing.scss
+++ b/src/partials/spacing.scss
@@ -5,9 +5,13 @@
 @include spacing(padding, p, 3);
 @include spacing(padding, p, 4);
 @include spacing(padding, p, 5);
+@include spacing(padding, p, 6);
+@include spacing(padding, p, 7);
 
 @include spacing(margin, m, 1);
 @include spacing(margin, m, 2);
 @include spacing(margin, m, 3);
 @include spacing(margin, m, 4);
 @include spacing(margin, m, 5);
+@include spacing(margin, m, 6);
+@include spacing(margin, m, 7);
