--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,4 @@
 @import "partials/spacing.scss";
 @import "partials/text.scss";
 @import "partials/typography.scss";
+@import "partials/viewbox.scss";
