--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "partials/background.scss";
 @import "partials/button.scss";
 @import "partials/flexbox.scss";
 @import "partials/spacing.scss";
