--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,18 +1,2 @@
-$font-families: ( // Font families
-        light: "Quicksand-Light",
-        regular: "Quicksand-Regular",
-        medium: "Quicksand-Medium",
-        semibold: "Quicksand-SemiBold",
-        bold: "Quicksand-Bold"
-);
-
-$colors: ( //
-        primary: #0d6efd,
-        secondary: #6c757d,
-        success: #198754,
-        warning: #ffc107,
-        danger: #dc3545,
-        info: #0dcaf0,
-        light: #f8f9fa,
-        dark: #212529 //
-);
+@import "colors";
+@import "font-families";
