--- a/src/partials/typography.scss
+++ b/src/partials/typography.scss
@@ -17,15 +17,19 @@
 }
 
 .h3 {
-  @include typography(17px, 28px);
+  @include typography(18px, 28px);
 }
 
 .h4 {
-  @include typography(15px, 24px);
+  @include typography(16px, 24px);
 }
 
 .h5 {
-  @include typography(13px, 20px);
+  @include typography(14px, 20px);
+}
+
+.h6 {
+  @include typography(12px, 18px);
 }
 
 @mixin subtitle($font_size, $line-height) {
