--- a/src/partials/spacing.scss
+++ b/src/partials/spacing.scss
@@ -1,17 +1,6 @@
 @import "mixins";
 
-@include spacing(padding, p, 1);
-@include spacing(padding, p, 2);
-@include spacing(padding, p, 3);
-@include spacing(padding, p, 4);
-@include spacing(padding, p, 5);
-@include spacing(padding, p, 6);
-@include spacing(padding, p, 7);
-
-@include spacing(margin, m, 1);
-@include spacing(margin, m, 2);
-@include spacing(margin, m, 3);
-@include spacing(margin, m, 4);
-@include spacing(margin, m, 5);
-@include spacing(margin, m, 6);
-@include spacing(margin, m, 7);
+@for $i from 1 through 10 {
+    @include spacing(padding, p, $i);
+    @include spacing(margin, m, $i);
+}
