--- a/src/partials/flexbox.scss
+++ b/src/partials/flexbox.scss
@@ -138,3 +138,8 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.flexColStart {
+  flex-direction: column;
+  justify-content: center;
+}
