--- a/src/partials/_mixins.scss
+++ b/src/partials/_mixins.scss
@@ -5,10 +5,7 @@
   $spacing_size: $size * 4px;
 
   .#{$prefix}#{$size} {
-    #{$property}-left: $spacing_size;
-    #{$property}-right: $spacing_size;
-    #{$property}-top: $spacing_size;
-    #{$property}-bottom: $spacing_size;
+    #{$property}: $spacing_size $spacing_size;
   }
 
   .#{$prefix + "x"}#{$size} {
