--- a/src/partials/border.scss
+++ b/src/partials/border.scss
@@ -6,6 +6,14 @@
     border-radius: 22px;
 }
 
+.radius16 {
+    border-radius: 16px;
+}
+
+.radius12 {
+    border-radius: 12px;
+}
+
 .radius10 {
     border-radius: 10px;
 }
