--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,15 @@
 @import "partials/background.scss";
+
+@import "partials/border.scss";
+
 @import "partials/button.scss";
+
 @import "partials/flexbox.scss";
+
 @import "partials/spacing.scss";
+
 @import "partials/text.scss";
+
 @import "partials/typography.scss";
+
 @import "partials/viewbox.scss";
